--- a/package.json
+++ b/package.json
@@ -1,95 +1,97 @@
 {
-  "name": "gulp-frontend-start-project",
-  "version": "1.0.0",
-  "description": "Gulp frontend start project",
-  "scripts": {
-    "dev": "gulp watch",
-    "build:dev": "gulp build",
-    "build:prod": "gulp build --prod",
-    "precommit": "lint-staged",
-    "eslint": "eslint --format=node_modules/eslint-formatter-pretty src/js/",
-    "eslint-fix": "npm run eslint -- --fix",
-    "style:lint": "stylelint src/scss/**/*.scss --config ./.stylelintrc",
-    "style:fix": "stylelint src/scss/**/*.scss --fix --config ./.stylelintrc",
-    "prettier": "prettier --write src/**/*.js"
-  },
-  "lint-staged": {
-    "src/js/**/*.{js, jsx}": [
-      "node_modules/.bin/eslint",
-      "prettier --write",
-      "git add"
+    "name": "gulp-frontend-start-project",
+    "version": "1.0.0",
+    "description": "Gulp frontend start project",
+    "scripts": {
+        "dev": "gulp watch",
+        "build:dev": "gulp build",
+        "build:prod": "gulp build --prod",
+        "precommit": "lint-staged",
+        "eslint": "eslint --format=node_modules/eslint-formatter-pretty src/js/",
+        "eslint-fix": "npm run eslint -- --fix",
+        "style:lint": "stylelint src/scss/**/*.scss --config ./.stylelintrc",
+        "style:fix": "stylelint src/scss/**/*.scss --fix --config ./.stylelintrc",
+        "prettier": "prettier --write src/**/*.js"
+    },
+    "lint-staged": {
+        "src/js/**/*.{js, jsx}": [
+            "node_modules/.bin/eslint",
+            "prettier --write",
+            "git add"
+        ],
+        "src/scss/**/*.scss": [
+            "stylelint --fix --config ./.stylelintrc",
+            "prettier --write",
+            "git add"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "keywords": [
+        "gulp",
+        "js",
+        "sass",
+        "linters"
     ],
-    "src/scss/**/*.scss": [
-      "stylelint --fix --config ./.stylelintrc",
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead",
+        "not IE 11"
+    ],
+    "author": "berdnikovdima.ru",
+    "license": "WTFPL",
+    "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/eslint-parser": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/register": "^7.15.3",
+        "babelify": "^10.0.0",
+        "browser-sync": "^2.27.5",
+        "browserify": "^17.0.0",
+        "del": "^6.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-changed": "^4.0.3",
+        "gulp-clean-css": "^4.3.0",
+        "gulp-group-css-media-queries": "^1.2.2",
+        "gulp-if": "^3.0.0",
+        "gulp-imagemin": "^7.1.0",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^5.0.0",
+        "gulp-sass-glob": "^1.1.0",
+        "gulp-sourcemaps": "^3.0.0",
+        "gulp-svg-sprite": "^1.5.0",
+        "gulp-uglify": "^3.0.2",
+        "husky": "^7.0.2",
+        "imagemin-pngquant": "^9.0.2",
+        "imagemin-webp": "^6.0.0",
+        "import-fresh": "^3.3.0",
+        "lint-staged": "^11.2.3",
+        "prettier": "^2.4.1",
+        "sass": "^1.43.2",
+        "stylelint": "^13.13.1",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-order": "^4.1.0",
+        "stylelint-selector-bem-pattern": "^2.1.1",
+        "vinyl-buffer": "^1.0.1",
+        "vinyl-source-stream": "^2.0.0"
+    },
+    "dependencies": {
+        "focus-visible": "^5.2.0",
+        "jquery": "^3.6.0",
+        "normalize.css": "^8.0.1",
+        "smart-grid": "^2.1.2",
+        "svg4everybody": "^2.1.9",
+        "swiper": "^7.0.9",
+        "vanilla-lazyload": "^17.5.0"
     }
-  },
-  "keywords": [
-    "gulp",
-    "js",
-    "sass",
-    "linters"
-  ],
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not IE 11"
-  ],
-  "author": "berdnikovdima.ru",
-  "license": "WTFPL",
-  "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/eslint-parser": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/register": "^7.12.13",
-    "babelify": "^10.0.0",
-    "browser-sync": "^2.26.14",
-    "browserify": "^17.0.0",
-    "del": "^6.0.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-changed": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sass-glob": "^1.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-svg-sprite": "^1.5.0",
-    "gulp-uglify": "^3.0.2",
-    "husky": "^4.3.8",
-    "imagemin-pngquant": "^9.0.1",
-    "imagemin-webp": "^6.0.0",
-    "import-fresh": "^3.3.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1",
-    "stylelint": "^13.10.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-order": "^4.1.0",
-    "stylelint-selector-bem-pattern": "^2.1.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
-  },
-  "dependencies": {
-    "focus-visible": "^5.2.0",
-    "normalize.css": "^8.0.1",
-    "smart-grid": "^2.1.2",
-    "svg4everybody": "^2.1.9",
-    "swiper": "^7.0.8",
-    "vanilla-lazyload": "^17.5.0"
-  }
 }
