--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
         "imagemin-webp": "^6.0.0",
         "import-fresh": "^3.3.0",
         "lint-staged": "^11.2.6",
+        "postcss": "^8.3.11",
+        "postcss-loader": "^6.2.0",
+        "postcss-scss": "^4.0.2",
         "prettier": "^2.4.1",
         "sass": "^1.43.4",
         "stylelint": "^14.0.1",
