--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "del": "^6.0.0",
         "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-formatter-pretty": "^4.1.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.0.0",
         "gulp": "^4.0.2",
@@ -76,14 +77,14 @@
         "imagemin-webp": "^6.0.0",
         "import-fresh": "^3.3.0",
         "lint-staged": "^11.2.6",
-        "postcss": "^8.3.11",
         "postcss-loader": "^6.2.0",
-        "postcss-scss": "^4.0.2",
         "prettier": "^2.4.1",
         "sass": "^1.43.4",
         "stylelint": "^14.0.1",
         "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-standard-scss": "^2.0.0",
         "stylelint-order": "^5.0.0",
+        "stylelint-scss": "^4.0.0",
         "stylelint-selector-bem-pattern": "^2.1.1",
         "vinyl-buffer": "^1.0.1",
         "vinyl-source-stream": "^2.0.0"
