--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
         "dev": "gulp watch",
         "build:dev": "gulp build",
         "build:prod": "gulp build --prod",
+        "precommit": "lint-staged",
         "eslint": "eslint --format=node_modules/eslint-formatter-pretty src/js/",
         "eslint-fix": "npm run eslint -- --fix",
         "style:lint": "stylelint src/scss/**/*.scss --config ./.stylelintrc",
         "style:fix": "stylelint src/scss/**/*.scss --fix --config ./.stylelintrc",
-        "prettier": "prettier --write src/**/*.js",
-        "prepare": "husky install"
+        "prettier": "prettier --write src/**/*.js"
+    },
+    "husky": {
+        "hooks": {
+            "precommit": "lint-staged"
+        }
     },
     "lint-staged": {
         "src/js/**/*.{js, jsx}": [
@@ -24,11 +29,6 @@
             "prettier --write",
             "git add"
         ]
-    },
-    "husky": {
-        "hooks": {
-            "precommit": "lint-staged"
-        }
     },
     "keywords": [
         "gulp",
@@ -55,6 +55,7 @@
         "del": "^6.0.0",
         "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-formatter-pretty": "^4.1.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.0.0",
         "gulp": "^4.0.2",
