--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "husky": {
         "hooks": {
-            "precommit": "lint-staged"
+            "pre-commit": "lint-staged"
         }
     },
     "lint-staged": {
