--- a/package.json
+++ b/package.json
@@ -6,21 +6,16 @@
         "dev": "gulp watch",
         "build:dev": "gulp build",
         "build:prod": "gulp build --prod",
-        "precommit": "lint-staged",
         "eslint": "eslint --format=node_modules/eslint-formatter-pretty src/js/",
         "eslint-fix": "npm run eslint -- --fix",
         "style:lint": "stylelint src/scss/**/*.scss --config ./.stylelintrc",
         "style:fix": "stylelint src/scss/**/*.scss --fix --config ./.stylelintrc",
-        "prettier": "prettier --write src/**/*.js"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+        "prettier": "prettier --write src/**/*.js",
+        "prepare": "husky install"
     },
     "lint-staged": {
         "src/js/**/*.{js, jsx}": [
-            "node_modules/.bin/eslint",
+            "node_modules/.bin/eslint --max-warnings=0",
             "prettier --write",
             "git add"
         ],
