--- a/package.json
+++ b/package.json
@@ -6,17 +6,12 @@
         "dev": "gulp watch",
         "build:dev": "gulp build",
         "build:prod": "gulp build --prod",
-        "pre-commit": "lint-staged",
         "eslint": "eslint --format=node_modules/eslint-formatter-pretty src/js/",
         "eslint-fix": "npm run eslint -- --fix",
         "style:lint": "stylelint src/scss/**/*.scss --config ./.stylelintrc.json",
         "style:fix": "stylelint src/scss/**/*.scss --fix --config ./.stylelintrc.json",
-        "prettier": "prettier --write src/**/*.js"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+        "prettier": "prettier --write src/**/*.js",
+        "prepare": "husky install"
     },
     "lint-staged": {
         "src/js/**/*.{js, jsx}": [
